// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build Space Between 1`] = `
".space-x-reverse > :not([hidden]) ~ :not([hidden]) {
  --w-space-x-reverse: 1;
}"
`;

exports[`Build Space Between 2`] = `
".space-y-2 > :not([hidden]) ~ :not([hidden]) {
  --w-space-y-reverse: 0;
  margin-bottom: calc(0.5rem * var(--w-space-y-reverse));
  margin-top: calc(0.5rem * calc(1 - var(--w-space-y-reverse)));
}"
`;

exports[`Margin Combined 1`] = `
Object {
  "margin": "1rem",
}
`;

exports[`Margin Combined 2`] = `
Object {
  "margin": "auto",
}
`;

exports[`Margin Combined 3`] = `
Object {
  "margin": "-2.5rem",
}
`;

exports[`Margin Combined 4`] = `
Object {
  "marginLeft": "0.375rem",
  "marginRight": "0.375rem",
}
`;

exports[`Margin Combined 5`] = `
Object {
  "marginBottom": "3rem",
  "marginTop": "3rem",
}
`;

exports[`Margin Combined 6`] = `
Object {
  "marginTop": "0.5rem",
}
`;

exports[`Margin Combined 7`] = `
Object {
  "marginLeft": "0.5rem",
}
`;

exports[`Margin Combined 8`] = `
Object {
  "marginBottom": "0.5rem",
}
`;

exports[`Margin Combined 9`] = `
Object {
  "marginRight": "0.5rem",
}
`;

exports[`Margin Separated 1`] = `
Object {
  "margin": "1rem",
}
`;

exports[`Margin Separated 2`] = `
Object {
  "margin": "auto",
}
`;

exports[`Margin Separated 3`] = `
Object {
  "margin": "-2.5rem",
}
`;

exports[`Margin Separated 4`] = `
Object {
  "marginLeft": "0.375rem",
  "marginRight": "0.375rem",
}
`;

exports[`Margin Separated 5`] = `
Object {
  "marginBottom": "3rem",
  "marginTop": "3rem",
}
`;

exports[`Margin Separated 6`] = `
Object {
  "marginTop": "0.5rem",
}
`;

exports[`Margin Separated 7`] = `
Object {
  "marginLeft": "0.5rem",
}
`;

exports[`Margin Separated 8`] = `
Object {
  "marginBottom": "0.5rem",
}
`;

exports[`Margin Separated 9`] = `
Object {
  "marginRight": "0.5rem",
}
`;

exports[`Padding Combined 1`] = `
Object {
  "padding": "1rem",
}
`;

exports[`Padding Combined 2`] = `
Object {
  "padding": "5rem",
}
`;

exports[`Padding Combined 3`] = `
Object {
  "paddingLeft": "0.375rem",
  "paddingRight": "0.375rem",
}
`;

exports[`Padding Combined 4`] = `
Object {
  "paddingBottom": "3rem",
  "paddingTop": "3rem",
}
`;

exports[`Padding Combined 5`] = `
Object {
  "paddingTop": "0.5rem",
}
`;

exports[`Padding Combined 6`] = `
Object {
  "paddingLeft": "0.5rem",
}
`;

exports[`Padding Combined 7`] = `
Object {
  "paddingBottom": "0.5rem",
}
`;

exports[`Padding Combined 8`] = `
Object {
  "paddingRight": "0.5rem",
}
`;

exports[`Padding Separated 1`] = `
Object {
  "padding": "1rem",
}
`;

exports[`Padding Separated 2`] = `
Object {
  "padding": "5rem",
}
`;

exports[`Padding Separated 3`] = `
Object {
  "paddingLeft": "0.375rem",
  "paddingRight": "0.375rem",
}
`;

exports[`Padding Separated 4`] = `
Object {
  "paddingBottom": "3rem",
  "paddingTop": "3rem",
}
`;

exports[`Padding Separated 5`] = `
Object {
  "paddingTop": "0.5rem",
}
`;

exports[`Padding Separated 6`] = `
Object {
  "paddingLeft": "0.5rem",
}
`;

exports[`Padding Separated 7`] = `
Object {
  "paddingBottom": "0.5rem",
}
`;

exports[`Padding Separated 8`] = `
Object {
  "paddingRight": "0.5rem",
}
`;

exports[`Space Between 1`] = `
Object {
  "& > :not([hidden]) ~ :not([hidden])": Object {
    "--w-space-x-reverse": "1",
  },
}
`;

exports[`Space Between 2`] = `
Object {
  "& > :not([hidden]) ~ :not([hidden])": Object {
    "--w-space-x-reverse": "0",
    "marginLeft": "calc(1rem * calc(1 - var(--w-space-x-reverse)))",
    "marginRight": "calc(1rem * var(--w-space-x-reverse))",
  },
}
`;

exports[`Space Between 3`] = `
Object {
  "& > :not([hidden]) ~ :not([hidden])": Object {
    "--w-space-x-reverse": "0",
    "marginLeft": "calc(-2.5rem * calc(1 - var(--w-space-x-reverse)))",
    "marginRight": "calc(-2.5rem * var(--w-space-x-reverse))",
  },
}
`;

exports[`Space Between 4`] = `
Object {
  "& > :not([hidden]) ~ :not([hidden])": Object {
    "--w-space-y-reverse": "1",
  },
}
`;

exports[`Space Between 5`] = `
Object {
  "& > :not([hidden]) ~ :not([hidden])": Object {
    "--w-space-y-reverse": "0",
    "marginBottom": "calc(0.5rem * var(--w-space-y-reverse))",
    "marginTop": "calc(0.5rem * calc(1 - var(--w-space-y-reverse)))",
  },
}
`;

exports[`Space Between 6`] = `
Object {
  "& > :not([hidden]) ~ :not([hidden])": Object {
    "--w-space-y-reverse": "0",
    "marginBottom": "calc(-1rem * var(--w-space-y-reverse))",
    "marginTop": "calc(-1rem * calc(1 - var(--w-space-y-reverse)))",
  },
}
`;
